Fixed issue with double overflow layout

--- a/src/app/organization/organization.component.scss
+++ b/src/app/organization/organization.component.scss
@@ -32,6 +32,7 @@
 .table-fixed {
     width: 100%;
     height: 100%;
+    overflow: hidden;
     thead {
         background-color: white;
     }
